--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".adapter.DetailActivity">
+    tools:context=".DetailActivity">
 
     <LinearLayout
         android:orientation="horizontal"
@@ -23,6 +23,7 @@
         </ImageView>
 
         <TextView
+
             android:layout_marginLeft="10dp"
             android:textSize="20dp"
             tools:text="sadf"
@@ -34,14 +35,22 @@
 
     </LinearLayout>
 
-    <TextView
+
+    <ScrollView
+        android:id="@+id/issueContent"
         app:layout_constraintTop_toBottomOf="@+id/userProfile"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:id="@+id/issueContent"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
+
+
+    <TextView
+        android:id="@+id/issueContentTv"
         android:textSize="20dp"
         android:textColor="@android:color/darker_gray"
         android:layout_width="match_parent"
-        android:layout_height="0dp">
+        android:layout_height="match_parent">
     </TextView>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
