--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,9 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+   <TextView
+       android:id="@+id/titleTv"
+       android:layout_marginBottom="10dp"
+       app:layout_constraintTop_toTopOf="parent"
+       app:layout_constraintBottom_toTopOf="@+id/issueRecylcer"
+       android:text="google / dager"
+       android:textColor="@android:color/black"
+       android:textSize="20sp"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content">
+
+   </TextView>
+
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/issueRecylcer"
+       app:layout_constraintTop_toBottomOf="@+id/titleTv"
+       app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
-       android:layout_height="match_parent"/>
+       android:layout_height="0dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
