--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -16,17 +16,20 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_height="wrap_content">
+            android:id="@+id/issueProfileImg"
+            android:layout_width="40dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="2dp"
+            android:layout_height="40dp">
 
         </ImageView>
 
         <TextView
-
+            android:id="@+id/issueUserTv"
             android:layout_marginLeft="10dp"
             android:textSize="20dp"
             tools:text="sadf"
+            android:layout_gravity="center"
             android:textColor="@android:color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -41,6 +44,7 @@
         app:layout_constraintTop_toBottomOf="@+id/userProfile"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
+        android:padding="5dp"
         android:layout_height="0dp">
 
 
